# SimpleWebProxy

./: .gitignore  CMakeLists.txt
StrUtils/: CMakeLists.txt  lib4str.c  lib4str.h
Test/: CMakeLists.txt  test_fuc.c  test_fuc.h
TryCatch/: CMakeLIsts.txt  try_catch.h
platform/win/Common/: CMakeLists.txt  SocketException.h  SocketUtils.c  SocketUtils.h  common.c  common.h  lib4http.c  lib4http.h
platform/win/ProxyServer/: CMakeLists.txt  lib4proxy.c  lib4proxy.h  proxy_server.c  proxy_server.h
src/: CMakeLists.txt  main.c
