project(Common)
add_library(${PROJECT_NAME} SocketUtils.c)
add_library(lib::common ALIAS ${PROJECT_NAME})

if (MINGW)
    list(APPEND wins_libs ws2_32)
    list(APPEND wins_libs Mswsock)
    list(APPEND wins_libs AdvApi32)
    target_link_libraries(${PROJECT_NAME} PRIVATE ${wins_libs})
    message(STATUS "socket libs: ${wins_libs}")
endif()